test/end-to-end/compile-errors/match-variant-without-else.crow
main void()
	info log match x
	as x
		"hello"

v variant
x variant-member(v)
